# validation-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: jira-sync.yml  publish.yml  python-test-build.yml
telicent_validation_tool/: __init__.py  validators.py
tests/: test_json_validation.py  test_rdf_validation.py
